demos/tkg-ingress-contour/files/http-services.yaml
apiVersion: v1
kind: Service
metadata:
  name: s1
  namespace: contour-ingress-demo
  labels:
    app: hello
spec:
  selector:
    app: hello
    tier: web
  ports:
  - port: 80
    targetPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: s2
  namespace: contour-ingress-demo
  labels:
    app: hello
spec:
  selector:
    app: hello
    tier: web
  ports:
  - port: 80
    targetPort: 8080
