demos/tkg-ingress-contour/files/https-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: https-ingress
  namespace: NAMESPACE
  labels:
    app: echoserver
spec:
  tls:
  - secretName: https-secret
    hosts:
      - echoserver.DNS_DOMAIN
  rules:
  - host: echoserver.DNS_DOMAIN
    http:
      paths:
      - path: /foo
        backend:
          serviceName: echoserver-1
          servicePort: 8080
      - path: /bar
        backend:
          serviceName: echoserver-2
          servicePort: 8080
